--- a/index.html
+++ b/index.html
@@ -1,13 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <title>Login Form</title>
+  </head>
+  <body>
+    <div class="hero">
+      <div class="form-box">
+        <div class="button-box">
+          <div id="btn"></div>
+          <button type="button" class="toggle-btn" onclick="Login()">Log In</button>
+          <button type="button" class="toggle-btn" onclick="Register()">Register</button>
+        </div>
+        <div class="social-icons">
+          <img src="fb.png" />
+          <img src="tw.png" />
+          <img src="Ld.png" />
+        </div>
+        <form id="Login" class="input-group">
+            <input type="text" placeholder="User Id" class="input-failed" required>
+            <input type="text" placeholder="Enter Password" class="input-failed" required>
+            <input type="checkbox" class="check-box"><span>Remember Password</span>
+            <button type="submit" class="submit-btn">Login</button>
+        </form>
+         <form id="Register" class="input-group">
+            <input type="text" placeholder="User Id" class="input-failed" required>
+            <input type="email" placeholder="Email" class="input-failed" required>
+            <input type="text" placeholder="Enter Password" class="input-failed" required>
+            <input type="checkbox" class="check-box"><span>I agree to the terms & conditions</span>
+            <button type="submit" class="submit-btn">Register</button>
+        </form>
+      </div>
+    </div>
+    <script src="script.js"></script>
+  </body>
 </html>
